feat(taxi-dispatcher): Added new check methods for tables before the simulation and improved cabs and reservations saving